tests/error/fstPairOfPairAndList-no-force.uplc
(program 0.0.0
  [(builtin fstPair)
   (con pair (bool) (bytestring)
        (True, #012345))]
)
